--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,21 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     package="com.example.library">
 
     <application
         android:allowBackup="true"
-        android:dataExtractionRules="@xml/data_extraction_rules"
-        android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/avatar"
-        android:label="@string/appname"
+        android:label="@string/app_name"
         android:roundIcon="@mipmap/avatar"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Library"
-        tools:targetApi="31">
+        android:theme="@style/Theme.Library">
         <activity android:name=".WelcomeActivity"
-            android:exported="true">
-            <intent-filter>
+            android:exported="true">  <intent-filter>
             <action android:name="android.intent.action.MAIN" />
 
             <category android:name="android.intent.category.LAUNCHER" />
